<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment"
    tools:ignore="ExtraText"
    style="@style/BackgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:theme="@style/ToolBarStyle"/>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sai_about_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="-80dp"
            android:background="?attr/colorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/img_item_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="88dp"
            android:src="@android:color/white"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <ImageView
            android:id="@+id/icon_company"
            android:layout_width="24dp"
            android:layout_height="23dp"
            android:layout_marginRight="6dp"
            android:contentDescription="@string/icon_company_content_desc"
            style="@style/IconColor"
            android:src="@drawable/baseline_home_work_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_user_company"
            app:layout_constraintEnd_toStartOf="@+id/tv_user_company"
            app:layout_constraintTop_toTopOf="@+id/tv_user_company"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/tv_user_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_company"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <ImageView
            android:id="@+id/icon_origin"
            android:layout_width="24dp"
            android:layout_height="23dp"
            android:layout_marginRight="6dp"
            android:contentDescription="@string/icon_origin_content_desc"
            android:src="@drawable/baseline_location_on_24"
            style="@style/IconColor"
            app:layout_constraintBottom_toBottomOf="@+id/tv_user_origin"
            app:layout_constraintEnd_toStartOf="@+id/tv_user_origin"
            app:layout_constraintTop_toTopOf="@+id/tv_user_origin"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_user_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:text="@string/user_origin"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/icon_username"
            android:layout_width="24dp"
            android:layout_height="23dp"
            android:src="@drawable/ic_about"
            android:layout_marginRight="6dp"
            android:contentDescription="@string/icon_username_content_desc"
            app:layout_constraintBottom_toBottomOf="@+id/tv_username"
            app:layout_constraintEnd_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toTopOf="@+id/tv_username"
            app:layout_constraintVertical_bias="0.0"
            style="@style/IconColor" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/username"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_origin" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            app:layout_constraintEnd_toEndOf="@+id/img_item_photo"
            app:layout_constraintStart_toStartOf="@+id/img_item_photo"
            app:layout_constraintTop_toTopOf="@+id/img_item_photo" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/TabStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_company"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_favorite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:checkable="true"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            app:iconSize="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/sai_about_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toBottomOf="@+id/sai_about_page"
            android:visibility="gone"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>