<resources>
    <string name="app_name">MyGithubUser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="github">Github</string>
    <string name="instagram">Instagram</string>
    <string name="user_email">Email</string>
    <string name="user_origin">Origin</string>
    <string name="user_interest">Interest</string>
    <string name="user_company">Company</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="users">Users</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="no_user_found">No User Found</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="icon_company_content_desc">Icon Company</string>
    <string name="icon_origin_content_desc">Icon Origin</string>
    <string name="icon_username_content_desc">Icon Origin</string>
    <string name="user_photo_content_desc">User Photo</string>
</resources>