<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <group>
        <item android:id="@+id/theme"
            android:title="@string/menu_1"
            android:icon = "@drawable/baseline_light_mode_24"
            app:showAsAction="always" />
        <item android:id="@+id/about"
            android:title="@string/menu_2"
            android:icon = "@drawable/ic_about"
            app:showAsAction="always" />
    </group>
</menu>